--- a/src/index.css
+++ b/src/index.css
@@ -252,3 +252,23 @@ html {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.photos {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 25px;
+  margin: 20px 5%;
+}
+
+.photo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 18px;
+  background: white;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
